# resize

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: bench.rs
examples/: resize.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: lib.rs  no_std_float.rs  px.rs
tests/: qa.rs
