[package]
name = "resize"
version = "0.7.5"
description = "Simple image resampling library in pure Rust."
authors = ["Kornel <kornel@geekhood.net>", "Kagami Hiiragi <kagami@genshiken.org>"]
categories = ["graphics", "multimedia::images"]
keywords = ["resize", "scale", "resample", "image", "graphics"]
documentation = "https://docs.rs/resize"
homepage = "https://github.com/PistonDevelopers/resize"
repository = "https://github.com/PistonDevelopers/resize.git"
license = "MIT"
readme = "README.md"
include = ["Cargo.toml", "README.md", "LICENSE", "src/*.rs"]
edition = "2021"
rust-version = "1.57"

[dev-dependencies]
png = "0.17.7"

[dependencies]
fallible_collections = { version = "0.4.7", features = ["rust_1_57"] }
rgb = "0.8.36"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
