[package]
name = "resize"
version = "0.8.8"
description = "Simple image resampling library in pure Rust."
authors = ["Kornel <kornel@geekhood.net>", "Kagami Hiiragi <kagami@genshiken.org>"]
categories = ["graphics", "multimedia::images", "no-std"]
keywords = ["resize", "scale", "resample", "image", "graphics"]
documentation = "https://docs.rs/resize"
homepage = "https://github.com/PistonDevelopers/resize"
repository = "https://github.com/PistonDevelopers/resize.git"
license = "MIT"
readme = "README.md"
include = ["Cargo.toml", "README.md", "LICENSE", "src/*.rs"]
edition = "2021"
rust-version = "1.63"

[features]
default = ["std", "rayon"]
# If you disable `std`, you must also enable `no_std`
std = []
# Takes effect *only* if `std` is disabled. Use `default-features=false`.
no_std = ["dep:libm", "dep:hashbrown"]
rayon = ["dep:rayon", "std"]

[dev-dependencies]
png = "0.17.14"

[dependencies]
rgb = { version = "0.8.50", default-features = false }
libm = { version = "0.2.11", optional = true }
hashbrown = { version = "0.15", optional = true }
rayon = { version = "1.10.0", optional = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[badges]
maintenance = { status = "actively-developed" }
